--- a/my-portfolio/hello-world/src/styles/global.css
+++ b/my-portfolio/hello-world/src/styles/global.css
@@ -346,8 +346,8 @@ display:none}
   padding-left: 1%;
 }
 
-.images{
-
+.stakeholder{
+  width: 100%;
 }
 @media screen and (max-width: 600px) {
   nav a{display: none;}
@@ -446,7 +446,9 @@ img{
   padding: 10%;
 }
 
-
+.persona{
+  max-width: 180px;
+}
 
 .screen-images{
   box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.5);
@@ -606,9 +608,14 @@ justify-content: center;
   padding-left: 4%;
   padding-right: 4%;
 }
-.image-box img{
-  max-width: 50%;
+
+.stakeholder img{
+  max-width: 100% !important;
 }
+
+/* .image-box img{
+  max-width: 50%;
+} */
 .section-image img{
     width: 100% !important;
 }
@@ -736,4 +743,5 @@ margin: auto;
 .section-image img{
     width: 100% !important;
 }
+
 }
