updated about me

--- a/my-portfolio/hello-world/src/styles/global.css
+++ b/my-portfolio/hello-world/src/styles/global.css
@@ -539,6 +539,9 @@ justify-content: center;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+
   }
 
   .about-text{
