--- a/my-portfolio/hello-world/src/styles/global.css
+++ b/my-portfolio/hello-world/src/styles/global.css
@@ -316,7 +316,9 @@ display:none}
 
 .footer{
   padding: 3%;
+  margin-top: 2%;
   text-align: center;
+  background-color: rgb(157, 173, 188, 0.5);
 }
 
 .social-media{
