--- a/my-portfolio/hello-world/src/styles/global.css
+++ b/my-portfolio/hello-world/src/styles/global.css
@@ -139,8 +139,7 @@ nav{
 }
 
 .banner-description{
-  padding-left: 10%;
-  padding-right: 10%;
+  margin: 5%;
 }
 
  h1{
@@ -386,9 +385,7 @@ display:none}
 }
 
 
-.banner-description{
-  padding-left: 0;
-}
+
 
 .salmon-journey img{
   width:100%;
@@ -627,6 +624,12 @@ justify-content: center;
   justify-content: center;
   padding: 5%;
 }
+
+.banner-description{
+  padding-left: 0;
+  margin: 0;
+}
+
 .section-text-box{
   align-items: center;
   display: flex;
