--- a/my-portfolio/hello-world/src/styles/global.css
+++ b/my-portfolio/hello-world/src/styles/global.css
@@ -17,46 +17,22 @@ body{
 font-weight: 400;
 font-style: normal;
 }
-strong{
-  font-family: freight-sans-pro, sans-serif;
 
-font-weight: 700;
-font-style: normal;
-}
-
-.project-card{
-  padding: 2%;
-}
-.serif-header{
-  font-family: freight-display-pro, serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 1.75em;
-  line-height: 1.2;
-  padding-bottom: 2%;
-  display: block;
-}
-.serif-title{
-  font-family: freight-display-pro, serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 2em;
-  line-height: 1.2;
-  color: #fff
+.internal-link{
+  text-decoration: underline;
+  color: #000;
 }
 
-.serif-label{
-  font-family: freight-display-pro, serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: .75em;
+.internal-link:hover{
+  color: #FF8A00;
 }
+
 /* Container styles */
 #outercontainer{
-
   display: flex;
   flex-direction: column;
 }
+
 ::selection {
 background: #FF8A00; /* WebKit/Blink Browsers */
 }
@@ -64,15 +40,8 @@ background: #FF8A00; /* WebKit/Blink Browsers */
     font-size: 18px;
     margin: auto;
     width: 95%;
-    /* font-family: neue-haas-grotesk-display, sans-serif; */
 }
-/* .nav-link-left{
-  font-size: 1.1rem;
-  padding-left: 3%;
-  padding-top: 3%;
-  text-align: left !important;
-  font-weight: bold;
-} */
+
 
 /* Nav styles */
 .homepage-image{
@@ -172,13 +141,6 @@ nav{
   margin: 5%;
 }
 
- h1{
-  text-align: center;
-  font-family: freight-display-pro, serif;
-  font-weight: 300;
-  font-style: normal;
-  letter-spacing: 1px;
-}
 
 .insightNumber{
   font-family: freight-display-pro, serif;
@@ -218,32 +180,86 @@ nav{
 .cta-button:hover {
   background-color: #FF8A00;
 }
-.banner-title h3{
 
+/* Colors */
+.salmon{
+  background-color: #FFD4C8;
+}
 
-  font-family: freight-sans-pro, sans-serif;
+.blue-grey{
+  background-color: #727F84;
+  color:white;
+}
+.light-blue{
+  background-color: #9DADBC;
+  color: #fff
+}
+.pale-green{
+  background-color: #7A9E91;
+  color:white;
+}
 
-  font-weight: 500;
-
-  font-style: normal;
-  font-size: 1.3em;
-  /* font-family: ff-meta-correspondence-web-p, sans-serif;
-  font-style: normal;
-  font-weight: 400; */
+.purple{
+  background-color: #5D536B;
+  color: white;
 }
 
 
-
-
-/* Header styles */
+/* font styles */
 
 h1{
   font-size: 3em;
-  /* font-weight: bold; */
+ text-align: center;
+ font-family: freight-display-pro, serif;
+ font-weight: 300;
+ font-style: normal;
+ letter-spacing: 1px;
 }
+
 
 h2{
   font-weight: 400;
+}
+
+.banner-title h3{
+  font-family: freight-sans-pro, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 1.3em;
+}
+
+.serif-title{
+  font-family: freight-display-pro, serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 1.2;
+  color: #fff
+}
+
+.serif-label{
+  font-family: freight-display-pro, serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: .75em;
+}
+
+strong{
+  font-family: freight-sans-pro, sans-serif;
+
+font-weight: 700;
+font-style: normal;
+}
+
+
+.serif-header{
+  font-family: freight-display-pro, serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 1.75em;
+  line-height: 1.2;
+  padding-bottom: 2%;
+  display: block;
 }
 
 a{
@@ -270,6 +286,14 @@ a{
   padding: 8%;
   /* vertical-align: middle; */
 }
+
+.flex-box{
+  padding-left: 5%;
+  padding-right: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 /* Project styles */
 
 #projects{
@@ -284,6 +308,9 @@ a{
 
 }
 
+.project-card{
+  padding: 2%;
+}
 
 
 .project-title{
@@ -358,7 +385,6 @@ display:none}
 
 .footer{
   padding: 3%;
-  margin-top: 2%;
   text-align: center;
   background-color: rgb(157, 173, 188, 0.5);
 }
@@ -369,6 +395,9 @@ display:none}
 .social-link{
   padding: 1%;
 }
+
+.social-link img{
+width: 50px;}
 
 
 .content-photo-left{
@@ -401,6 +430,7 @@ display:none}
 .stakeholder{
   width: 100%;
 }
+
 @media screen and (max-width: 600px) {
   nav a{display: none;}
   nav a.icon {
@@ -429,9 +459,6 @@ display:none}
   margin-left: calc(-50vw + 50%);
 }
 
-
-
-
 .salmon-journey img{
   width:100%;
 }
@@ -447,7 +474,7 @@ img{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #fff;
+  /* background-color: #fff; */
   padding: 5%;
   width: 100vw;
   margin-left: calc(-50vw + 50%);
@@ -459,7 +486,6 @@ img{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #fff;
   padding: 5%;
   width: 100vw;
   margin-left: calc(-50vw + 50%);
@@ -507,26 +533,7 @@ img{
 .screen-images{
   box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.5);
 }
-.salmon{
-  background-color: #FFD4C8;
-}
-.blue-grey{
-  background-color: #727F84;
-  color:white;
-}
-.light-blue{
-  background-color: #9DADBC;
-  color: #fff
-}
-.pale-green{
-  background-color: #7A9E91;
-  color:white;
-}
 
-.purple{
-  background-color: #5D536B;
-  color: white;
-}
 .left-content{
   display: flex;
   flex-direction: column-reverse;
@@ -717,8 +724,6 @@ justify-content: center;
   padding: 5%;
 }
 
-
-
 .img-text-text{
   width: 40%;
   padding-left: 4%;
@@ -729,9 +734,6 @@ justify-content: center;
   max-width: 100% !important;
 }
 
-/* .image-box img{
-  max-width: 50%;
-} */
 .section-image img{
     width: 100% !important;
 }
